Create csv for dan to combine
Merged datasets together and made a csv file from the merged dataset

--- a/Visualization Notebook.ipynb
+++ b/Visualization Notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "2643406e",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "1bad3ce6",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "b2135f26",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "af862523",
    "metadata": {
     "scrolled": false
@@ -82,11 +82,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "3c6ce70e",
    "metadata": {
     "scrolled": true
    },
+   "outputs": [],
+   "source": [
+    "df2.head();\n",
+    "\n",
+    "df2.to_csv('give_dan.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "705db2be",
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -121,116 +133,183 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>-119.567893</td>\n",
-       "      <td>36.137170</td>\n",
-       "      <td>1865</td>\n",
-       "      <td>S0335</td>\n",
-       "      <td>Corcoran 2 Solar LLC CED</td>\n",
-       "      <td>Kings</td>\n",
-       "      <td>19.8</td>\n",
-       "      <td>2015/06/10 00:00:00+00</td>\n",
+       "      <th>297</th>\n",
+       "      <td>-117.230656</td>\n",
+       "      <td>34.086506</td>\n",
+       "      <td>2664</td>\n",
+       "      <td>S0676</td>\n",
+       "      <td>Victor Solar</td>\n",
+       "      <td>San Bernardino</td>\n",
+       "      <td>24.50</td>\n",
+       "      <td>2017/06/02 00:00:00+00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>-119.579712</td>\n",
-       "      <td>36.144319</td>\n",
-       "      <td>1866</td>\n",
-       "      <td>S0520</td>\n",
-       "      <td>Corcoran 3 Solar</td>\n",
-       "      <td>Kings</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>2016/02/11 00:00:00+00</td>\n",
+       "      <th>416</th>\n",
+       "      <td>-117.700857</td>\n",
+       "      <td>33.985024</td>\n",
+       "      <td>3041</td>\n",
+       "      <td>S0118</td>\n",
+       "      <td>SPVP002 Chino Rooftop Solar</td>\n",
+       "      <td>San Bernardino</td>\n",
+       "      <td>1.22</td>\n",
+       "      <td>2009/10/01 00:00:00+00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>-119.128325</td>\n",
-       "      <td>36.266298</td>\n",
-       "      <td>1869</td>\n",
-       "      <td>S0608</td>\n",
-       "      <td>Exeter Solar</td>\n",
-       "      <td>Tulare</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>2014/02/12 00:00:00+00</td>\n",
+       "      <th>417</th>\n",
+       "      <td>-117.571907</td>\n",
+       "      <td>34.032455</td>\n",
+       "      <td>3042</td>\n",
+       "      <td>S0199</td>\n",
+       "      <td>SPVP032 Ontario - Kennedy 2</td>\n",
+       "      <td>San Bernardino</td>\n",
+       "      <td>1.74</td>\n",
+       "      <td>2011/12/22 00:00:00+00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>-119.134000</td>\n",
-       "      <td>36.211778</td>\n",
-       "      <td>1870</td>\n",
-       "      <td>S0609</td>\n",
-       "      <td>Lindsay Solar</td>\n",
-       "      <td>Tulare</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2014/01/15 00:00:00+00</td>\n",
+       "      <th>419</th>\n",
+       "      <td>-117.605560</td>\n",
+       "      <td>34.039411</td>\n",
+       "      <td>3044</td>\n",
+       "      <td>S0433</td>\n",
+       "      <td>Terra Francesco</td>\n",
+       "      <td>San Bernardino</td>\n",
+       "      <td>1.49</td>\n",
+       "      <td>2015/03/01 00:00:00+00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>-119.039944</td>\n",
-       "      <td>36.103717</td>\n",
-       "      <td>1871</td>\n",
-       "      <td>S9325</td>\n",
-       "      <td>ImModo California 1 LLC_(East Orosi 1)</td>\n",
-       "      <td>Tulare</td>\n",
-       "      <td>1.5</td>\n",
+       "      <th>420</th>\n",
+       "      <td>-117.591767</td>\n",
+       "      <td>34.050484</td>\n",
+       "      <td>3047</td>\n",
+       "      <td>S9412</td>\n",
+       "      <td>Jurupa Valley Solar PV</td>\n",
+       "      <td>San Bernardino</td>\n",
+       "      <td>1.50</td>\n",
+       "      <td>2014/01/03 00:00:00+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>655</th>\n",
+       "      <td>-117.310338</td>\n",
+       "      <td>35.007260</td>\n",
+       "      <td>3453</td>\n",
+       "      <td>S0104</td>\n",
+       "      <td>Mojave Solar Project</td>\n",
+       "      <td>San Bernardino</td>\n",
+       "      <td>250.00</td>\n",
+       "      <td>2014/12/04 00:00:00+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>726</th>\n",
+       "      <td>-115.451703</td>\n",
+       "      <td>35.535438</td>\n",
+       "      <td>3579</td>\n",
+       "      <td>S0078</td>\n",
+       "      <td>Ivanpah I (Solar Partners II)</td>\n",
+       "      <td>San Bernardino</td>\n",
+       "      <td>126.00</td>\n",
+       "      <td>2013/12/30 00:00:00+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>727</th>\n",
+       "      <td>-115.482945</td>\n",
+       "      <td>35.575516</td>\n",
+       "      <td>3580</td>\n",
+       "      <td>S0079</td>\n",
+       "      <td>Ivanpah II (Solar Partners I)</td>\n",
+       "      <td>San Bernardino</td>\n",
+       "      <td>133.00</td>\n",
        "      <td>2013/12/31 00:00:00+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>728</th>\n",
+       "      <td>-115.470211</td>\n",
+       "      <td>35.556883</td>\n",
+       "      <td>3581</td>\n",
+       "      <td>S0080</td>\n",
+       "      <td>Ivanpah III (Solar Partners VIII)</td>\n",
+       "      <td>San Bernardino</td>\n",
+       "      <td>133.00</td>\n",
+       "      <td>2013/12/31 00:00:00+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>730</th>\n",
+       "      <td>-115.426956</td>\n",
+       "      <td>35.591157</td>\n",
+       "      <td>3583</td>\n",
+       "      <td>S0457</td>\n",
+       "      <td>Desert Stateline Solar Facility</td>\n",
+       "      <td>San Bernardino</td>\n",
+       "      <td>299.99</td>\n",
+       "      <td>2015/12/10 00:00:00+00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>94 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "            X          Y  OBJECTID CECPlantID  \\\n",
-       "0 -119.567893  36.137170      1865      S0335   \n",
-       "1 -119.579712  36.144319      1866      S0520   \n",
-       "2 -119.128325  36.266298      1869      S0608   \n",
-       "3 -119.134000  36.211778      1870      S0609   \n",
-       "4 -119.039944  36.103717      1871      S9325   \n",
+       "              X          Y  OBJECTID CECPlantID  \\\n",
+       "297 -117.230656  34.086506      2664      S0676   \n",
+       "416 -117.700857  33.985024      3041      S0118   \n",
+       "417 -117.571907  34.032455      3042      S0199   \n",
+       "419 -117.605560  34.039411      3044      S0433   \n",
+       "420 -117.591767  34.050484      3047      S9412   \n",
+       "..          ...        ...       ...        ...   \n",
+       "655 -117.310338  35.007260      3453      S0104   \n",
+       "726 -115.451703  35.535438      3579      S0078   \n",
+       "727 -115.482945  35.575516      3580      S0079   \n",
+       "728 -115.470211  35.556883      3581      S0080   \n",
+       "730 -115.426956  35.591157      3583      S0457   \n",
        "\n",
-       "                                PlantName  County  Capacity_Latest  \\\n",
-       "0                Corcoran 2 Solar LLC CED   Kings             19.8   \n",
-       "1                        Corcoran 3 Solar   Kings             20.0   \n",
-       "2                            Exeter Solar  Tulare              3.5   \n",
-       "3                           Lindsay Solar  Tulare              4.0   \n",
-       "4  ImModo California 1 LLC_(East Orosi 1)  Tulare              1.5   \n",
+       "                             PlantName          County  Capacity_Latest  \\\n",
+       "297                       Victor Solar  San Bernardino            24.50   \n",
+       "416        SPVP002 Chino Rooftop Solar  San Bernardino             1.22   \n",
+       "417        SPVP032 Ontario - Kennedy 2  San Bernardino             1.74   \n",
+       "419                    Terra Francesco  San Bernardino             1.49   \n",
+       "420             Jurupa Valley Solar PV  San Bernardino             1.50   \n",
+       "..                                 ...             ...              ...   \n",
+       "655               Mojave Solar Project  San Bernardino           250.00   \n",
+       "726      Ivanpah I (Solar Partners II)  San Bernardino           126.00   \n",
+       "727      Ivanpah II (Solar Partners I)  San Bernardino           133.00   \n",
+       "728  Ivanpah III (Solar Partners VIII)  San Bernardino           133.00   \n",
+       "730    Desert Stateline Solar Facility  San Bernardino           299.99   \n",
        "\n",
-       "                StartDate  \n",
-       "0  2015/06/10 00:00:00+00  \n",
-       "1  2016/02/11 00:00:00+00  \n",
-       "2  2014/02/12 00:00:00+00  \n",
-       "3  2014/01/15 00:00:00+00  \n",
-       "4  2013/12/31 00:00:00+00  "
+       "                  StartDate  \n",
+       "297  2017/06/02 00:00:00+00  \n",
+       "416  2009/10/01 00:00:00+00  \n",
+       "417  2011/12/22 00:00:00+00  \n",
+       "419  2015/03/01 00:00:00+00  \n",
+       "420  2014/01/03 00:00:00+00  \n",
+       "..                      ...  \n",
+       "655  2014/12/04 00:00:00+00  \n",
+       "726  2013/12/30 00:00:00+00  \n",
+       "727  2013/12/31 00:00:00+00  \n",
+       "728  2013/12/31 00:00:00+00  \n",
+       "730  2015/12/10 00:00:00+00  \n",
+       "\n",
+       "[94 rows x 8 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df2['PlantName'] = \"\"\n",
-    "df2['Capacity'] = \"\"\n",
-    "\n",
-    "for index, row in df.iterrows():\n",
-    "    if row['County']\n",
-    "df.head()\n"
+    "df.head()\n",
+    "df.loc[df[\"County\"] == \"San Bernardino\"]\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ec72330b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "705db2be",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
